# remove_suffix_in_file_names

./: LICENSE  Makefile  README.md  main.py  pyproject.toml
