[tool.poetry]
name = "rename-files"
version = "0.1.0"
description = ""
authors = ["Deyvidas <devidbanyavichyus@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^23.12.1"
autoflake = "^2.2.1"
mypy = "^1.8.0"


[tool.poetry.group.prod.dependencies]
questionary = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
